// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given the SidebarHeader component when the component is rendered and account is defined should match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 32px;
  height: 100px;
  padding: 24px 48px;
  background-color: #1a1823;
  border-radius: 4px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  grid-column: 1/4;
}

.c1 span {
  font-size: 16px;
  font-weight: 500;
  color: #9895a6;
}

@media screen and (max-width:1440px) {
  .c0 {
    gap: 24px;
    padding: 24px 48px;
  }
}

@media screen and (max-width:1180px) {
  .c0 {
    grid-template-columns: 32px 56px 32px;
    gap: 24px;
    padding: 24px;
  }
}

@media screen and (max-width:1024px) {
  .c0 {
    grid-template-rows: none;
    grid-template-columns: 56px 250px 32px 32px;
    justify-items: start;
    -webkit-box-pack: start;
    -webkit-justify-content: start;
    -ms-flex-pack: start;
    justify-content: start;
    gap: 10px;
    height: 100px;
    background-color: #201d2a;
    border-bottom: 1px solid #302E3D;
    border-radius: 0;
  }
}

@media screen and (max-width:834px) {
  .c0 {
    grid-template-columns: 56px 150px 32px 32px;
    border-radius: 0;
  }
}

@media screen and (max-width:700px) {
  .c0 {
    grid-template-columns: 56px 1fr 44px 44px;
    gap: 16px;
    padding: 20px;
  }
}

@media screen and (max-width:375px) {
  .c0 {
    grid-column: 1fr 44px 44px;
  }
}

@media screen and (max-width:1024px) {
  .c1 {
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
    grid-column: 2/3;
    grid-row: 1/2;
    padding-left: 14px;
  }
}

@media screen and (max-width:375px) {
  .c1 {
    grid-column: 1/2;
    padding: 0;
  }
}

@media screen and (max-width:1440px) {
  .c1 span {
    font-size: 14px;
  }
}

<header
    class="c0"
  >
    <div
      class="c1"
    >
      <p>
        My Account
      </p>
      <span>
        123456...9012
      </span>
    </div>
  </header>
</DocumentFragment>
`;

exports[`Given the SidebarHeader component when the component is rendered and account is null should match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 32px;
  height: 100px;
  padding: 24px 48px;
  background-color: #1a1823;
  border-radius: 4px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  grid-column: 1/4;
}

.c1 span {
  font-size: 16px;
  font-weight: 500;
  color: #9895a6;
}

@media screen and (max-width:1440px) {
  .c0 {
    gap: 24px;
    padding: 24px 48px;
  }
}

@media screen and (max-width:1180px) {
  .c0 {
    grid-template-columns: 32px 56px 32px;
    gap: 24px;
    padding: 24px;
  }
}

@media screen and (max-width:1024px) {
  .c0 {
    grid-template-rows: none;
    grid-template-columns: 56px 250px 32px 32px;
    justify-items: start;
    -webkit-box-pack: start;
    -webkit-justify-content: start;
    -ms-flex-pack: start;
    justify-content: start;
    gap: 10px;
    height: 100px;
    background-color: #201d2a;
    border-bottom: 1px solid #302E3D;
    border-radius: 0;
  }
}

@media screen and (max-width:834px) {
  .c0 {
    grid-template-columns: 56px 150px 32px 32px;
    border-radius: 0;
  }
}

@media screen and (max-width:700px) {
  .c0 {
    grid-template-columns: 56px 1fr 44px 44px;
    gap: 16px;
    padding: 20px;
  }
}

@media screen and (max-width:375px) {
  .c0 {
    grid-column: 1fr 44px 44px;
  }
}

@media screen and (max-width:1024px) {
  .c1 {
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
    grid-column: 2/3;
    grid-row: 1/2;
    padding-left: 14px;
  }
}

@media screen and (max-width:375px) {
  .c1 {
    grid-column: 1/2;
    padding: 0;
  }
}

@media screen and (max-width:1440px) {
  .c1 span {
    font-size: 14px;
  }
}

<header
    class="c0"
  >
    <div
      class="c1"
    >
      <p>
        My Account
      </p>
      <span>
        -
      </span>
    </div>
  </header>
</DocumentFragment>
`;
